# Sklad2_HK-2.0

./: CMakeLists.txt  README.md
UI/: AuthWindow.cpp  AuthWindow.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h
UI/components/: KPIWidget.cpp  KPIWidget.h
UI/core/: SplashScreen.cpp  SplashScreen.h
UI/dialogs/: AccountDialog.cpp  AccountDialog.h  AddProductDialog.cpp  AddProductDialog.h  ContainerDialog.cpp  ContainerDialog.h  CreateOrderDialog.cpp  CreateOrderDialog.h  CreateRequestDialog.cpp  CreateRequestDialog.h  GenerateQRDialog.cpp  GenerateQRDialog.h  HistoryDialog.cpp  HistoryDialog.h  InventoryDialog.cpp  InventoryDialog.h  NotificationsDialog.cpp  NotificationsDialog.h  ProductListDialog.cpp  ProductListDialog.h  ReportDialog.cpp  ReportDialog.h  RequestsAdminDialog.cpp  RequestsAdminDialog.h  SearchQRDialog.cpp  SearchQRDialog.h  StockInDialog.cpp  StockInDialog.h  StockOutDialog.cpp  StockOutDialog.h  UserDashboardDialog.cpp  UserDashboardDialog.h
UI/pages/: AnalyticsPage.cpp  AnalyticsPage.h  DashboardPage.cpp  DashboardPage.h  OrdersPage.cpp  OrdersPage.h  ReportsPage.cpp  ReportsPage.h  RequestsPage.cpp  RequestsPage.h  SettingsPage.cpp  SettingsPage.h  WarehousePage.cpp  WarehousePage.h
core/: Logger.cpp  Logger.h  Session.cpp  Session.h  Statuses.h
database/: DatabaseService.cpp  DatabaseService.h
domain/: Roles.h
qrcodegen/: Readme.markdown
qrcodegen/java-fast/io/nayuki/fastqrcodegen/: QrTemplate.java
qrcodegen/java/src/main/java/io/nayuki/qrcodegen/: QrCode.java
qrcodegen/python/: qrcodegen-demo.py  qrcodegen.py
qrcodegen/rust-no-heap/: Cargo.toml  Readme.markdown
qrcodegen/rust-no-heap/examples/: qrcodegen-demo.rs
qrcodegen/rust-no-heap/src/: lib.rs
qrcodegen/rust/src/: lib.rs
qrcodegen/typescript-javascript/: qrcodegen-input-demo.html  qrcodegen-input-demo.ts  qrcodegen.ts
services/: AuthService.cpp  AuthService.h  ContainerService.cpp  ContainerService.h  HistoryService.cpp  HistoryService.h  NotificationService.cpp  NotificationService.h  OrderService.cpp  OrderService.h  ProductService.cpp  ProductService.h  QRService.cpp  QRService.h  ReportService.cpp  ReportService.h  RequestService.cpp  RequestService.h  StockService.cpp  StockService.h  UserService.cpp  UserService.h
utils/: QrGenerator.cpp  QrGenerator.h
